fix: header align item

--- a/online-store/src/components/Header/Header.scss
+++ b/online-store/src/components/Header/Header.scss
@@ -3,6 +3,8 @@
 .header {
   height: 80px;
   padding: 16px 0;
+  display: flex;
+  align-items: center;
   .header-container {
     display: flex;
     justify-content: space-between;
